--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "axios": "^1.6.0",
+    "xml2js": "^0.6.2"
   }
 }
