--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "axios": "^1.6.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "node-cron": "^3.0.3"
   }
 }
